--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="progress__col progress__col--first">
 						<span class="year">2012</span>
 						<p class="desc">Чемпион России по Кроссфиту</p>
-						<p class="desc">Победитель первого отборочного этапа на Crossfit Games</p>
+						<p class="desc desc--end">Победитель первого отборочного этапа на Crossfit Games</p>
 						<div class="progress__images">
 							<div class="progress__images__inner">
 								<img src="assets/img/shokhin-01_2X.jpg" alt="">
@@ -102,7 +102,7 @@
 					<div class="progress__col progress__col--first">
 						<span class="year">2015</span>
 						<p class="desc">Победитель кубка вызова “Ратиборец”</p>
-						<p class="desc">Победитель первого отборочного этапа на Crossfit Games</p>
+						<p class="desc desc--end">Победитель первого отборочного этапа на Crossfit Games</p>
 						<div class="progress__images">
 							<div class="progress__images__inner">
 								<img src="assets/img/shokhin-01_2X.jpg" alt="">
