--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<a href="#price" class="navlink">Стоимость</a>
 				<a href="#contacts" class="navlink">Контакты</a>
 			</nav>
-			<a href="#" class="btn btn--primary">Свяжитесь со мной</a>
+			<a href="#contacts" class="btn btn--primary">Свяжитесь со мной</a>
 		</div>
 	</header>
 
@@ -35,7 +35,7 @@
 			<div class="hero__content">
 				<h1>Данила Шохин</h1>
 				<p>Персональный тренер по кроссфиту</p>
-				<a href="#" class="btn btn--secondary">Получить консультацию</a>
+				<a href="#contacts" class="btn btn--secondary">Получить консультацию</a>
 				<a class="arrow-down" href="#progress"><img src="assets/icons/arrow-down.svg" alt=""></a>
 			</div>
 			<video video autoplay loop muted playsinline webkit-playinginline>
@@ -47,7 +47,7 @@
 			<div class="container">
 				<h2>Достижения</h2>
 				<div class="progress__grid">
-					<div class="progress__col progress__col--first">
+					<div class="progress__col progress__col--first col-1">
 						<span class="year">2012</span>
 						<p class="desc">Чемпион России по Кроссфиту</p>
 						<p class="desc desc--end">Победитель первого отборочного этапа на Crossfit Games</p>
@@ -67,7 +67,7 @@
 						<img src="assets/icons/cubok.svg" alt="">
 						<div class="timeline"></div>
 					</div>
-					<div>
+					<div class="col-2">
 						<picture>
 							<source srcset="assets/img/danila_01_small@1x.avif 1x, assets/img/danila_01_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
 							<source srcset="assets/img/danila_01_small@1x.webp 1x, assets/img/danila_01_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
@@ -77,13 +77,20 @@
 							<img class="large-img" src="assets/img/danila_01_large@1x.jpg" srcset="assets/img/danila_01_large@2x.jpg 2x" alt="Сильный мужчина, поднимающий штангу.">
 						</picture>
 					</div>
-					<div>
-						<img class="large-img" src="assets/img/shokhin-01_2X.jpg" alt="">
+					<div class="col-3">
+						<picture>
+							<source srcset="assets/img/danila_01_small@1x.avif 1x, assets/img/danila_01_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
+							<source srcset="assets/img/danila_01_small@1x.webp 1x, assets/img/danila_01_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
+							<source srcset="assets/img/danila_01_small@1x.jpg 1x, assets/img/danila_01_small@2x.jpg 2x" media="(max-width: 500px)">
+							<source srcset="assets/img/danila_01_large@1x.avif 1x, assets/img/danila_01_large@2x.avif 2x" type="image/avif">
+							<source srcset="assets/img/danila_01_large@1x.webp 1x, assets/img/danila_01_large@2x.webp 2x" type="image/webp">
+							<img class="large-img" src="assets/img/danila_01_large@1x.jpg" srcset="assets/img/danila_01_large@2x.jpg 2x" alt="Сильный мужчина, поднимающий штангу.">
+						</picture>
 					</div>
 					<div class="timeline__wrap">
 						<img src="assets/icons/cubok.svg" alt="">
 					</div>
-					<div class="progress__col progress__col--second">
+					<div class="progress__col progress__col--second col-4">
 						<span class="year">2014</span>
 						<p class="desc">Серебряный призёр Чемпионата России по Кроссфиту</p>
 						<p class="desc">Серебряный призёр Siberian Showdown</p>
@@ -99,7 +106,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="progress__col progress__col--first">
+					<div class="progress__col progress__col--first col-5">
 						<span class="year">2015</span>
 						<p class="desc">Победитель кубка вызова “Ратиборец”</p>
 						<p class="desc desc--end">Победитель первого отборочного этапа на Crossfit Games</p>
@@ -118,8 +125,15 @@
 					<div class="timeline__wrap">
 						<img src="assets/icons/cubok.svg" alt="">
 					</div>
-					<div>
-						<img class="large-img" src="assets/img/shokhin-01_2X.jpg" alt="">
+					<div class="col-6">
+						<picture>
+							<source srcset="assets/img/danila_01_small@1x.avif 1x, assets/img/danila_01_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
+							<source srcset="assets/img/danila_01_small@1x.webp 1x, assets/img/danila_01_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
+							<source srcset="assets/img/danila_01_small@1x.jpg 1x, assets/img/danila_01_small@2x.jpg 2x" media="(max-width: 500px)">
+							<source srcset="assets/img/danila_01_large@1x.avif 1x, assets/img/danila_01_large@2x.avif 2x" type="image/avif">
+							<source srcset="assets/img/danila_01_large@1x.webp 1x, assets/img/danila_01_large@2x.webp 2x" type="image/webp">
+							<img class="large-img" src="assets/img/danila_01_large@1x.jpg" srcset="assets/img/danila_01_large@2x.jpg 2x" alt="Сильный мужчина, поднимающий штангу.">
+						</picture>
 					</div>
 				</div>
 				<div class="progress__bottom">
