--- a/index.html
+++ b/index.html
@@ -21,21 +21,11 @@
 			<a href="/" class="logo" aria-label="Нажать чтобы обновить страницу"><img src="assets/icons/logo.svg" alt="Главный логотип сайта"></a>
 			<nav>
 				<ul>
-					<li>
-						<a href="#progress" class="navlink">Достижения</a>
-					</li>
-					<li>
-						<a href="#about" class="navlink">Обо мне</a>
-					</li>
-					<li>
-						<a href="#transformation" class="navlink">Трансформации</a>
-					</li>
-					<li>
-						<a href="#price" class="navlink">Стоимость</a>
-					</li>
-					<li>
-						<a href="#contacts" class="navlink">Контакты</a>
-					</li>
+					<li><a href="#progress" class="navlink">Достижения</a></li>
+					<li><a href="#about" class="navlink">Обо мне</a></li>
+					<li><a href="#transformation" class="navlink">Трансформации</a></li>
+					<li><a href="#price" class="navlink">Стоимость</a></li>
+					<li><a href="#contacts" class="navlink">Контакты</a></li>
 				</ul>
 			</nav>
 			<a href="#contacts" class="btn btn--primary" aria-label="Перейти к блоку контактных данных">Свяжитесь со мной</a>
@@ -46,7 +36,7 @@
 		<section class="hero">
 			<div class="hero__content">
 				<h1>Данила Шохин</h1>
-				<p>Персональный тренер по кроссфиту</p>
+				<p>Персональный тренер</p>
 				<a href="#contacts" class="btn btn--secondary" aria-label="Перейти к блоку контактных данных">Получить консультацию</a>
 				<a class="arrow-down" href="#progress" aria-label="Пролистать вниз к следующему блоку"><img src="assets/icons/arrow-down.svg" alt=""></a>
 			</div>
@@ -72,10 +62,18 @@
 								</picture>
 							</div>
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_05@1x.avif 1x, assets/img/danila_05@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_05@1x.webp 1x, assets/img/danila_05@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_05@1x.jpg" srcset="assets/img/danila_05@2x.jpg 2x" alt="Сильный мужчина напрягся.">
+								</picture>
 							</div>
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_06@1x.avif 1x, assets/img/danila_06@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_06@1x.webp 1x, assets/img/danila_06@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_06@1x.jpg" srcset="assets/img/danila_06@2x.jpg 2x" alt="Трое мужчин получают награды.">
+								</picture>
 							</div>
 						</div>
 					</div>
@@ -112,29 +110,53 @@
 						<p class="desc">Серебряный призёр Siberian Showdown</p>
 						<div class="progress__images">
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_07@1x.avif 1x, assets/img/danila_07@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_07@1x.webp 1x, assets/img/danila_07@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_07@1x.jpg" srcset="assets/img/danila_07@2x.jpg 2x" alt="Мужчина делает упражнение.">
+								</picture>
 							</div>
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_08@1x.avif 1x, assets/img/danila_08@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_08@1x.webp 1x, assets/img/danila_08@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_08@1x.jpg" srcset="assets/img/danila_08@2x.jpg 2x" alt="Мужчина ходит на руках.">
+								</picture>
 							</div>
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_09@1x.avif 1x, assets/img/danila_09@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_09@1x.webp 1x, assets/img/danila_09@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_09@1x.jpg" srcset="assets/img/danila_09@2x.jpg 2x" alt="Мужчина несет тяжелую установку.">
+								</picture>
 							</div>
 						</div>
 					</div>
 					<div class="progress__col progress__col--first col-5">
 						<span class="year">2015</span>
 						<p class="desc">Победитель кубка вызова “Ратиборец”</p>
-						<p class="desc desc--end">Победитель первого отборочного этапа на Crossfit Games</p>
+						<p class="desc desc--end">Победитель по аэробной гимнастике</p>
 						<div class="progress__images">
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_10@1x.avif 1x, assets/img/danila_10@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_10@1x.webp 1x, assets/img/danila_10@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_10@1x.jpg" srcset="assets/img/danila_10@2x.jpg 2x" alt="Мужчина на соревнованиях по аэробной гимнастике.">
+								</picture>
 							</div>
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_11@1x.avif 1x, assets/img/danila_11@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_11@1x.webp 1x, assets/img/danila_11@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_11@1x.jpg" srcset="assets/img/danila_11@2x.jpg 2x" alt="Мужчина играет в регби.">
+								</picture>
 							</div>
 							<div class="progress__images__inner">
-								<img src="assets/img/shokhin-01_2X.jpg" alt="">
+								<picture>
+									<source srcset="assets/img/danila_12@1x.avif 1x, assets/img/danila_12@2x.avif 2x" type="image/avif">
+									<source srcset="assets/img/danila_12@1x.webp 1x, assets/img/danila_12@2x.webp 2x" type="image/webp">
+									<img src="assets/img/danila_12@1x.jpg" srcset="assets/img/danila_12@2x.jpg 2x" alt="Фотография мужчины с медалью и грамотой после соревнований по пауэрлифтингу.">
+								</picture>
 							</div>
 						</div>
 					</div>
@@ -174,15 +196,12 @@
 				<h2>Обо мне</h2>
 				<div class="about__grid">
 					<picture>
-						<source srcset="assets/img/about-danila_small@1x.avif 1x, assets/img/about-danila_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
-						<source srcset="assets/img/about-danila_small@1x.webp 1x, assets/img/about-danila_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
-						<source srcset="assets/img/about-danila_small@1x.jpg 1x, assets/img/about-danila_small@2x.jpg 2x" media="(max-width: 500x)">
-						<source srcset="assets/img/about-danila_medium@1x.avif 1x, assets/img/about-danila_medium@2x.avif 2x" media="(max-width: 1024px)" type="image/avif">
-						<source srcset="assets/img/about-danila_medium@1x.webp 1x, assets/img/about-danila_medium@2x.webp 2x" media="(max-width: 1024px)" type="image/webp">
-						<source srcset="assets/img/about-danila_medium@1x.jpg 1x, assets/img/about-danila_medium@2x.jpg 2x" media="(max-width: 1024x)">
-						<source srcset="assets/img/about-danila_large@1x.avif 1x, assets/img/about-danila_large@2x.avif 2x" type="image/avif">
-						<source srcset="assets/img/about-danila_large@1x.webp 1x, assets/img/about-danila_large@2x.webp 2x" type="image/webp">
-						<img src="assets/img/about-danila_large@1x.jpg" srcset="assets/img/about-danila_large@2x.jpg 2x" alt="Сильный мужчина с голым торсом.">
+						<source srcset="assets/img/danila_13_small@1x.avif 1x, assets/img/danila_13_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
+						<source srcset="assets/img/danila_13_small@1x.webp 1x, assets/img/danila_13_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
+						<source srcset="assets/img/danila_13_small@1x.jpg 1x, assets/img/danila_13_small@2x.jpg 2x" media="(max-width: 500x)">
+						<source srcset="assets/img/danila_13_large@1x.avif 1x, assets/img/danila_13_large@2x.avif 2x" type="image/avif">
+						<source srcset="assets/img/danila_13_large@1x.webp 1x, assets/img/danila_13_large@2x.webp 2x" type="image/webp">
+						<img src="assets/img/danila_13_large@1x.jpg" srcset="assets/img/danila_13_large@2x.jpg 2x" alt="Сильный мужчина с голым торсом.">
 					</picture>
 					<div class="about__text__wrap">
 						<div class="about__text__item">
@@ -257,7 +276,11 @@
 				<div class="style__grid">
 					<div class="style__col">
 						<div class="style__photo-wrap">
-							<img src="assets/img/shokhin-01_2X.jpg" alt="">
+							<picture>
+								<source srcset="assets/img/danila_14@1x.avif 1x, assets/img/danila_14@2x.avif 2x" type="image/avif">
+								<source srcset="assets/img/danila_14@1x.webp 1x, assets/img/danila_14@2x.webp 2x" type="image/webp">
+								<img src="assets/img/danila_14@1x.jpg" srcset="assets/img/danila_14@2x.jpg 2x" alt="Тренер показывает подъем штанги ученикам.">
+							</picture>
 							<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							<img src="assets/img/shokhin-01_2X.jpg" alt="">
 						</div>
