--- a/index.html
+++ b/index.html
@@ -276,13 +276,21 @@
 				<div class="style__grid">
 					<div class="style__col">
 						<div class="style__photo-wrap">
-							<img src="assets/img/shokhin-01_2X.jpg" alt="">
+							<picture>
+								<source srcset="assets/img/danila_17@1x.avif 1x, assets/img/danila_17@2x.avif 2x" type="image/avif">
+								<source srcset="assets/img/danila_17@1x.webp 1x, assets/img/danila_17@2x.webp 2x" type="image/webp">
+								<img src="assets/img/danila_17@1x.jpg" srcset="assets/img/danila_17@2x.jpg 2x" alt="Тренер показывает подъем штанги ученикам.">
+							</picture>
 							<picture>
 								<source srcset="assets/img/danila_14@1x.avif 1x, assets/img/danila_14@2x.avif 2x" type="image/avif">
 								<source srcset="assets/img/danila_14@1x.webp 1x, assets/img/danila_14@2x.webp 2x" type="image/webp">
 								<img src="assets/img/danila_14@1x.jpg" srcset="assets/img/danila_14@2x.jpg 2x" alt="Тренер показывает подъем штанги ученикам.">
 							</picture>
-							<img src="assets/img/shokhin-01_2X.jpg" alt="">
+							<picture>
+								<source srcset="assets/img/danila_19@1x.avif 1x, assets/img/danila_19@2x.avif 2x" type="image/avif">
+								<source srcset="assets/img/danila_19@1x.webp 1x, assets/img/danila_19@2x.webp 2x" type="image/webp">
+								<img src="assets/img/danila_19@1x.jpg" srcset="assets/img/danila_19@2x.jpg 2x" alt="Мужчина поднимает гантели.">
+							</picture>
 						</div>
 						<p>
 							Я работаю с абсолютно разными психотипами людей, и под каждого человека – подбираю индивидуальный метод работы.
@@ -327,9 +335,24 @@
 						</p>
 					</div>
 					<div class="vision__col">
-						<img src="assets/img/shokhin-02-2X.jpg" alt="">
-						<img src="assets/img/shokhin-02-2X.jpg" alt="">
-						<img src="assets/img/shokhin-02-2X.jpg" alt="">
+						<picture>
+							<source srcset="assets/img/danila_15@1x.avif 1x, assets/img/danila_15@2x.avif 2x" type="image/avif">
+							<source srcset="assets/img/danila_15@1x.webp 1x, assets/img/danila_15@2x.webp 2x" type="image/webp">
+							<img src="assets/img/danila_15@1x.jpg" srcset="assets/img/danila_15@2x.jpg 2x" alt="Мужчина тренеруется.">
+						</picture>
+						<picture>
+							<source srcset="assets/img/danila_16@1x.avif 1x, assets/img/danila_16@2x.avif 2x" type="image/avif">
+							<source srcset="assets/img/danila_16@1x.webp 1x, assets/img/danila_16@2x.webp 2x" type="image/webp">
+							<img src="assets/img/danila_16@1x.jpg" srcset="assets/img/danila_16@2x.jpg 2x" alt="Мужчина в прыжке.">
+						</picture>
+						<picture>
+							<source srcset="assets/img/danila_18_small@1x.avif 1x, assets/img/danila_18_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
+							<source srcset="assets/img/danila_18_small@1x.webp 1x, assets/img/danila_18_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
+							<source srcset="assets/img/danila_18_small@1x.jpg 1x, assets/img/danila_18_small@2x.jpg 2x" media="(max-width: 500x)">
+							<source srcset="assets/img/danila_18_large@1x.avif 1x, assets/img/danila_18_large@2x.avif 2x" type="image/avif">
+							<source srcset="assets/img/danila_18_large@1x.webp 1x, assets/img/danila_18_large@2x.webp 2x" type="image/webp">
+							<img src="assets/img/danila_18_large@1x.jpg" srcset="assets/img/danila_18_large@2x.jpg 2x" alt="Сильный мужчина показывает бицепс.">
+						</picture>
 					</div>
 				</div>
 			</div>
