Start Day Pre-change Header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 	<link rel="manifest" href="assets/favicons/manifest.webmanifest">
 
 	<link rel="stylesheet" href="css/main.min.css">
+	<script src="scripts/preloader.js" defer></script>
+	<script src="scripts/hamburger.js" defer></script>
 </head>
 <body>
-
+	<div class="preloader">
+		<div class="loader"></div>
+	</div>
 	<header>
 		<div class="header__container">
 			<a href="/" class="logo" aria-label="Нажать чтобы обновить страницу"><img src="assets/icons/logo.svg" alt="Главный логотип сайта"></a>
@@ -477,7 +481,7 @@
 							<img src="assets/icons/line-01.svg" alt="">
 							<span>30 000 рублей</span>
 						</div>
-						<a class="link link--secondary" href="#">Записаться на тренировку</a>
+						<!-- <a class="link link--secondary" href="#">Записаться на тренировку</a> -->
 					</div>
 
 					<div class="price__item">
@@ -487,8 +491,8 @@
 								<span>10 тренировочных сессий</span>
 							</div>
 							<p>
-								1 тренировочная сессия выходит за пределы 1 часа <br>
-								(длительность подбирается в зависимости <br> от тренировочной задачи и обговаривается заранее)
+								1 тренировочная сессия выходит за пределы 1 часа
+								(длительность подбирается в зависимости от тренировочной задачи и обговаривается заранее)
 							</p>
 						</div>
 					
@@ -496,10 +500,6 @@
 							<img src="assets/icons/line-02.svg" alt="">
 							<span>300 000 рублей</span>
 						</div>
-					</div>
-
-					<div class="price__item">
-
 					</div>
 				</div>
 			</div>
@@ -515,21 +515,22 @@
 	</main>
 
 	<footer>
-		<div class="container container__footer">
-			<div class="copyright">
-				<a href="/" aria-label="Нажать чтобы обновить страницу">
-					<img src="assets/icons/logo.svg" alt="Логотип Данилы Шохина">
-				</a>
-				<span>Все права защищены © Данила Шохин</span>
+	<div class="container container__footer">
+		<div class="copyright">
+			<a href="/" aria-label="Нажать чтобы обновить страницу">
+				<img src="assets/icons/logo.svg" alt="Логотип Данилы Шохина">
+			</a>
+			<span>Все права защищены © Данила Шохин</span>
 		</div>
-		<a class="link" href="#">Политика конфиденциальности</a>
 		<div class="networks">
-			<a href="#" aria-label="Перейти во вконтакт"><img src="assets/icons/vk.svg" alt="Логотип Вконтакте"></a>
-			<a href="#" aria-label="Перейти в телегам"><img src="assets/icons/telegram.svg" alt="Логотип Телеграм"></a>
-			<a href="#" aria-label="Перейти в воцап"><img src="assets/icons/whatsapp.svg" alt="Логотип Воцап"></a>
+			<div class="footer__social">
+				<a href="#" aria-label="Перейти во вконтакт"><img src="assets/icons/vk.svg" alt="Логотип Вконтакте"></a>
+				<a href="#" aria-label="Перейти в телегам"><img src="assets/icons/telegram.svg" alt="Логотип Телеграм"></a>
+				<a href="#" aria-label="Перейти в воцап"><img src="assets/icons/whatsapp.svg" alt="Логотип Воцап"></a>
+			</div>
 			<a href="#" aria-label="Перейти на сайт разработчика">Сделано в Net7</a>
 		</div>
-		</div>
+	</div>
 	</footer>
 
 </body>
