--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<header>
 		<div class="header__container">
 			<a href="/" class="logo" aria-label="Нажать чтобы обновить страницу"><img src="assets/icons/logo.svg" alt="Главный логотип сайта"></a>
+			<input type="checkbox" id="nav-toggle" class="nav-toggle">
 			<nav>
 				<ul>
 					<li><a href="#progress" class="navlink">Достижения</a></li>
@@ -32,7 +33,12 @@
 					<li><a href="#contacts" class="navlink">Контакты</a></li>
 				</ul>
 			</nav>
-			<a href="#contacts" class="btn btn--primary" aria-label="Перейти к блоку контактных данных">Свяжитесь со мной</a>
+			<div class="btn__wrap">
+				<a href="#contacts" class="btn btn--primary" aria-label="Перейти к блоку контактных данных">Свяжитесь со мной</a>
+				<label for="nav-toggle" class="burger-menu">
+					<span></span>
+				</label>
+			</div>
 		</div>
 	</header>
 
